[package]
name = "intrack"
version = "0.1.0"
edition = "2024"

[lib]
name = "intrack"
path = "src/lib.rs"

[lints.clippy]
default_constructed_unit_structs = "allow"
needless_raw_string_hashes = "allow"
must_use_candidate = "allow"
multiple_inherent_impl = "deny"
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow"

[dev-dependencies]
rstest = "0.26"
tokio-test = "0.4.4"

[dependencies]
bon = "3.8.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
derive_more = { version = "2.1.0", features = ["full"] }
dialoguer = "0.12.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
error-stack = "0.6.0"
futures = "0.3.31"
jiff = { version = "0.2.16", features = ["serde"] }
owo-colors = "4.2.3"
ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm"] }
regex = "1.12.2"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_valid = "2.0.0"
serde_yaml = "0.9.34"
smart-default = "0.7.1"
strum = { version = "0.27.2", features = ["derive"] }
textwrap = "0.16.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wherror = "2.3.1"
